--- a/finalpre/template_file.tex
+++ b/finalpre/template_file.tex
@@ -323,6 +323,18 @@ We compare the running time for same $k$ of different algorithms
 		1   & 5.26  & 5.31  & 10.1 
 	\end{tabular}
 \end{table}
+
+\subsection{Acceleration TIPS}
+Use LEMMA2 to accelerate our algorithm. Time of different algorithms:
+\begin{table}[H]
+	\centering
+	\begin{tabular}{ll}
+		\hline
+		T-SVD & T-SVD-With LEMMA2\\
+		\hline
+		9.8   & 1  
+	\end{tabular}
+\end{table}
 \newpage
 % bibliography
 \nocite{*}
